--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </table>
 
 Q4
-<video src="D:\movies\www.5MovieRulz.store - Mr. Bachchan (2024) 1080p WEB-DL - HQ - AVC - (DD+5.1 - 640Kbps) [Tel + Tam + Mal + Kan] - 8.1GB - ESub.mkv" autoplay loop controls></video> -->
+<video src="D:\movies\www.5MovieRulz.store - Mr. Bachchan (2024) 1080p WEB-DL - HQ - AVC - (DD+5.1 - 640Kbps) [Tel + Tam + Mal + Kan] - 8.1GB - ESub.mkv" autoplay loop controls></video> 
 Q5
 <div style="display: flex;">
     <a href="C:\Users\dvdin\Downloads\img.jpg.jpg" target="_blank"><img src="C:\Users\dvdin\Downloads\img.jpg.jpg" alt="Image 1" width="150"></a>
